fixed z-index of modal to appear on watchlist

--- a/client/public/css/modal.css
+++ b/client/public/css/modal.css
@@ -9,7 +9,7 @@
 }
 
 .ReactModal__Overlay.ReactModal__Overlay--after-open {
-  z-index: 4;
+  z-index: 100;
 }
 
 .ReactModal__Content.ReactModal__Content--after-open.nav-modal {
